--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2024"
 description = "ONREZA platform CLI — dev, build, deploy"
 license = "MIT"
 
+[lib]
+name = "nrz"
+path = "src/lib.rs"
+
 [[bin]]
 name = "nrz"
 path = "src/main.rs"
@@ -27,33 +31,31 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # Emulator: D1-compatible SQLite
 rusqlite = { version = "0.34", features = ["bundled"] }
 
+# HTTP server (emulator)
+axum = "0.8"
+
 # HTTP client (deploy, API calls)
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
 
-# Child process management (nrz dev)
-command-group = "5"
-
-# File watching (nrz dev — restart on config change)
-notify = "8"
-
-# Colors and progress
+# Colors
 console = "0.15"
-indicatif = "0.17"
-
-# Path and glob
-globset = "0.4"
 
 # Errors
 thiserror = "2"
 anyhow = "1"
 
-# Manifest validation
-jsonschema = "0.28"
+# URL handling (file:// URLs for NODE_OPTIONS)
+url = "2"
+
+# Unix signals (graceful shutdown)
+libc = "0.2"
 
 [dev-dependencies]
 assert_cmd = "2"
 predicates = "3"
 tempfile = "3"
+# HTTP client for integration tests
+reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
 
 [profile.release]
 lto = true
