--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,74 +1,35 @@
-name: CI and Release
+name: Release
 
 on:
-  push:
-    branches: [main]
-    tags: ['v*']
-  pull_request:
-    branches: [main]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to release (e.g., 0.1.0)'
+        required: true
+        type: string
+      draft:
+        description: 'Create as draft release'
+        required: false
+        type: boolean
+        default: false
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  # Run tests on every push/PR
-  test:
-    name: Test
+  # Prepare release: update version, changelog, create tag
+  prepare:
+    name: Prepare Release
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache cargo
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Run tests
-        run: cargo test --all
-
-      - name: Check formatting
-        run: cargo fmt -- --check
-
-      - name: Run clippy
-        run: cargo clippy -- -D warnings
-
-  # Lint commit messages
-  commitlint:
-    name: Lint Commit Messages
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    permissions:
+      contents: write
+    outputs:
+      tag_name: ${{ steps.version.outputs.tag_name }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install commitlint
-        run: npm install --save-dev @commitlint/cli @commitlint/config-conventional
-
-      - name: Lint commits
-        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
-
-  # Update CHANGELOG.md on push to main
-  changelog:
-    name: Update Changelog
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
@@ -76,29 +37,50 @@ jobs:
       - name: Install git-cliff
         run: cargo install git-cliff
 
-      - name: Generate changelog
-        run: git-cliff --config cliff.toml --output CHANGELOG.md
-
-      - name: Check for changes
-        id: verify_changed_files
-        uses: tj-actions/verify-changed-files@v20
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          files: CHANGELOG.md
+          node-version: '20'
 
-      - name: Commit changes
-        if: steps.verify_changed_files.outputs.files_changed == 'true'
+      - name: Install dependencies
+        run: npm install
+
+      - name: Configure Git
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
-          git add CHANGELOG.md
-          git commit -m "docs(changelog): update CHANGELOG.md"
+
+      - name: Update version in Cargo.toml
+        id: version
+        run: |
+          VERSION="${{ github.event.inputs.version }}"
+          TAG_NAME="v${VERSION}"
+          
+          # Update Cargo.toml
+          sed -i "s/^version = \".*\"/version = \"${VERSION}\"/" Cargo.toml
+          
+          echo "tag_name=${TAG_NAME}" >> $GITHUB_OUTPUT
+          echo "Version: ${VERSION}"
+          echo "Tag: ${TAG_NAME}"
+
+      - name: Generate changelog
+        run: git-cliff --config cliff.toml --output CHANGELOG.md
+
+      - name: Commit changes
+        run: |
+          git add Cargo.toml CHANGELOG.md Cargo.lock
+          git commit -m "chore(release): bump version to ${{ steps.version.outputs.tag_name }}"
           git push
 
+      - name: Create and push tag
+        run: |
+          git tag ${{ steps.version.outputs.tag_name }}
+          git push origin ${{ steps.version.outputs.tag_name }}
+
   # Build release binaries
-  build-release:
-    name: Build Release
-    needs: test
-    if: startsWith(github.ref, 'refs/tags/v')
+  build:
+    name: Build Binaries
+    needs: prepare
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -129,6 +111,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.prepare.outputs.tag_name }}
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
@@ -152,17 +136,17 @@ jobs:
           name: ${{ matrix.asset_name }}
           path: target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
 
-  # Create GitHub Release with changelog
+  # Create GitHub Release
   release:
     name: Create Release
-    needs: build-release
-    if: startsWith(github.ref, 'refs/tags/v')
+    needs: [prepare, build]
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
       - uses: actions/checkout@v4
         with:
+          ref: ${{ needs.prepare.outputs.tag_name }}
           fetch-depth: 0
 
       - name: Install Rust
@@ -184,16 +168,18 @@ jobs:
           done
           ls -la
 
-      - name: Generate release changelog
+      - name: Generate release notes
         run: git-cliff --config cliff.toml --latest --strip header --output RELEASE_NOTES.md
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ needs.prepare.outputs.tag_name }}
+          name: ${{ needs.prepare.outputs.tag_name }}
           body_path: RELEASE_NOTES.md
           files: |
             artifacts/**/*
-          draft: false
-          prerelease: ${{ contains(github.ref, '-rc') || contains(github.ref, '-beta') || contains(github.ref, '-alpha') }}
+          draft: ${{ github.event.inputs.draft }}
+          prerelease: ${{ contains(github.event.inputs.version, '-rc') || contains(github.event.inputs.version, '-beta') || contains(github.event.inputs.version, '-alpha') }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
