ci(release): migrate to onreza-release
Replace manual version input + git-cliff with onreza-release for
automated semver from conventional commits, built-in changelog,
binary distribution via npm trusted publishing (OIDC).

--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "nrz-cli",
+  "name": "nrz",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "description": "ONREZA platform CLI",
+  "files": [
+    "bin",
+    "scripts",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "prepare": "lefthook install || echo 'Install lefthook: https://github.com/evilmartians/lefthook'",
-    "commitlint": "commitlint"
+    "commitlint": "commitlint",
+    "release": "onreza-release"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "lefthook": "^1.6.0"
+    "lefthook": "^1.6.0",
+    "onreza-release": "^2.5.0"
   }
 }
