--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,184 +2,158 @@ name: Release
 
 on:
   workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to release (e.g., 0.1.0)'
-        required: true
-        type: string
-      draft:
-        description: 'Create as draft release'
-        required: false
-        type: boolean
-        default: false
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  # Prepare release: update version, changelog, create tag
-  prepare:
-    name: Prepare Release
+  release:
+    name: Release
     runs-on: ubuntu-latest
     permissions:
       contents: write
     outputs:
-      tag_name: ${{ steps.version.outputs.tag_name }}
+      version: ${{ steps.release.outputs.version }}
+      tag: ${{ steps.release.outputs.tag }}
+      released: ${{ steps.release.outputs.released }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Install git-cliff
-        run: cargo install git-cliff
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '24'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Configure Git
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
 
-      - name: Update version in Cargo.toml
-        id: version
+      - name: Run onreza-release
+        id: release
+        run: npx onreza-release --verbose
+
+      - name: Extract outputs
+        if: steps.release.outputs.released == 'true'
         run: |
-          VERSION="${{ github.event.inputs.version }}"
-          TAG_NAME="v${VERSION}"
-          
-          # Update Cargo.toml
-          sed -i "s/^version = \".*\"/version = \"${VERSION}\"/" Cargo.toml
-          
-          echo "tag_name=${TAG_NAME}" >> $GITHUB_OUTPUT
-          echo "Version: ${VERSION}"
-          echo "Tag: ${TAG_NAME}"
+          echo "Released version: ${{ steps.release.outputs.version }}"
+          echo "Tag: ${{ steps.release.outputs.tag }}"
 
-      - name: Generate changelog
-        run: git-cliff --config cliff.toml --output CHANGELOG.md
-
-      - name: Commit changes
-        run: |
-          git add Cargo.toml CHANGELOG.md Cargo.lock
-          git commit -m "chore(release): bump version to ${{ steps.version.outputs.tag_name }}"
-          git push
-
-      - name: Create and push tag
-        run: |
-          git tag ${{ steps.version.outputs.tag_name }}
-          git push origin ${{ steps.version.outputs.tag_name }}
-
-  # Build release binaries
   build:
-    name: Build Binaries
-    needs: prepare
+    name: Build (${{ matrix.platform }})
+    needs: release
+    if: needs.release.outputs.released == 'true'
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         include:
-          # Linux x86_64
-          - os: ubuntu-latest
+          - platform: linux-x64
+            os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: nrz
-            asset_name: nrz-linux-x64
-          
-          # macOS x86_64
-          - os: macos-latest
+            binary: nrz
+          - platform: darwin-x64
+            os: macos-latest
             target: x86_64-apple-darwin
-            artifact_name: nrz
-            asset_name: nrz-macos-x64
-          
-          # macOS ARM64 (Apple Silicon)
-          - os: macos-latest
+            binary: nrz
+          - platform: darwin-arm64
+            os: macos-latest
             target: aarch64-apple-darwin
-            artifact_name: nrz
-            asset_name: nrz-macos-arm64
-          
-          # Windows x86_64
-          - os: windows-latest
+            binary: nrz
+          - platform: win32-x64
+            os: windows-latest
             target: x86_64-pc-windows-msvc
-            artifact_name: nrz.exe
-            asset_name: nrz-windows-x64.exe
-
+            binary: nrz.exe
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ needs.prepare.outputs.tag_name }}
+          ref: ${{ needs.release.outputs.tag }}
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install cross-compilation tools (macOS ARM64)
-        if: matrix.target == 'aarch64-apple-darwin'
-        run: rustup target add aarch64-apple-darwin
-
       - name: Build release binary
         run: cargo build --release --target ${{ matrix.target }}
 
       - name: Strip binary (Linux/macOS)
         if: matrix.os != 'windows-latest'
-        run: strip target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
+        run: strip target/${{ matrix.target }}/release/${{ matrix.binary }}
+
+      - name: Create archive (Unix)
+        if: matrix.os != 'windows-latest'
+        run: tar -czf nrz-${{ matrix.platform }}.tar.gz -C target/${{ matrix.target }}/release ${{ matrix.binary }}
+
+      - name: Create archive (Windows)
+        if: matrix.os == 'windows-latest'
+        run: tar -czf nrz-${{ matrix.platform }}.tar.gz -C target/${{ matrix.target }}/release ${{ matrix.binary }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.asset_name }}
-          path: target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
+          name: nrz-${{ matrix.platform }}
+          path: nrz-${{ matrix.platform }}.tar.gz
 
-  # Create GitHub Release
-  release:
-    name: Create Release
-    needs: [prepare, build]
+  publish:
+    name: Publish
+    needs: [release, build]
+    if: needs.release.outputs.released == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      id-token: write
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ needs.prepare.outputs.tag_name }}
-          fetch-depth: 0
+          ref: ${{ needs.release.outputs.tag }}
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '24'
+          registry-url: 'https://registry.npmjs.org'
 
-      - name: Install git-cliff
-        run: cargo install git-cliff
+      - name: Install dependencies
+        run: npm ci && npm install -g npm@latest
 
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          path: artifacts
+          path: ./dist
 
-      - name: Create checksums
+      - name: Flatten dist directory
         run: |
-          cd artifacts
+          cd dist
           for dir in */; do
-            (cd "$dir" && sha256sum * > ../"${dir%/}.sha256")
+            mv "$dir"* .
+            rmdir "$dir"
           done
           ls -la
 
-      - name: Generate release notes
-        run: git-cliff --config cliff.toml --latest --strip header --output RELEASE_NOTES.md
+      - name: Publish binaries and npm packages
+        run: |
+          npx onreza-release publish-binaries \
+            --tag ${{ needs.release.outputs.tag }} \
+            --npm-publish "npm publish --provenance --access public" \
+            --verbose
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ needs.prepare.outputs.tag_name }}
-          name: ${{ needs.prepare.outputs.tag_name }}
-          body_path: RELEASE_NOTES.md
-          files: |
-            artifacts/**/*
-          draft: ${{ github.event.inputs.draft }}
-          prerelease: ${{ contains(github.event.inputs.version, '-rc') || contains(github.event.inputs.version, '-beta') || contains(github.event.inputs.version, '-alpha') }}
+      - name: Generate checksums
+        run: |
+          cd dist
+          sha256sum *.tar.gz > checksums-sha256.txt
+          cat checksums-sha256.txt
+
+      - name: Upload checksums to release
+        run: |
+          gh release upload ${{ needs.release.outputs.tag }} dist/checksums-sha256.txt --clobber
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
