--- a/.onrezarelease.jsonc
+++ b/.onrezarelease.jsonc
@@ -1,4 +1,5 @@
 {
+  "$schema": "node_modules/onreza-release/schema.json",
   "projectType": "rust",
   "git": {
     "commitMessage": "chore(release): v{{version}} [skip ci]",
@@ -40,7 +41,11 @@
     "retryAttempts": 3,
     "npm": {
       "generateScripts": true,
-      "updatePackageJson": false
+      "updatePackageJson": true,
+      "stripForPublish": true,
+      "addTarDependency": true,
+      "description": "ONREZA platform CLI — dev, build, deploy",
+      "readme": "npm-README.md"
     }
   },
   "commitlint": {
